--- a/index.html
+++ b/index.html
@@ -42,5 +42,6 @@
       </div>
     </main>
     <script src="../js/main.js"></script>
+    <!-- <script src="../js/main2.js"></script> -->
   </body>
 </html>
